tests/compile_fail/from/legacy_enum_attribute.stderr
error: legacy syntax, remove `types` and use `i32, &str, String` instead
 --> tests/compile_fail/from/legacy_enum_attribute.rs:3:12
  |
3 |     #[from(types(i32, "&str"))]
  |            ^^^^^
